added icons and color, history still broken

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,13 @@
+header{
+    background-color: midnightblue;
+}
+
 #searchSection{
     float: left;
     text-align: center;
+}
+
+.card {
+    background-color: midnightblue;
+    color: white;
 }
